<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        android:id="@+id/exit"
        android:orderInCategory="105"
        android:title="@string/exit"
        />
    <item
        android:id="@+id/translator"
        android:orderInCategory="102"
        android:title="@string/translator"

        />
    <item
        android:id="@+id/aboutUs"
        android:orderInCategory="104"
        android:title="@string/about_us"
        />
    <item
        android:id="@+id/settings"
        android:orderInCategory="103"
        android:title="@string/blue_light_settings"/>

    <item
        android:id="@+id/history"
        android:orderInCategory="101"
        android:title="@string/history"/>

         <item
                    android:id="@+id/bluelight1"
                    android:title="@string/blue_light_1"
                    />
                <item
                    android:id="@+id/bluelight2"
                    android:title="@string/blue_light_2"
                    />

</menu>
