<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.radheshyam.mybrowser.MainActivity"
    android:background="@drawable/eat_sleep_code_repeat">

        <de.hdodenhof.circleimageview.CircleImageView

               android:id="@+id/me_about"
               android:layout_width="96dp"
               android:layout_height="96dp"
               android:src="@drawable/me"
               app:civ_border_width="2dp"
               app:civ_border_color="#FF000000"
               android:layout_marginEnd="35dp"
               android:layout_marginBottom="75dp"
               android:layout_alignParentBottom="true"
               android:layout_alignParentEnd="true" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/yash_about"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/yash"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:layout_marginStart="49dp"
            android:layout_alignTop="@+id/me_about"
            android:layout_alignParentStart="true" />


       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/thisappText"
           android:text="@string/this_app_is_developed_by_us_android_developers_and_graphic_designer"
           android:textStyle="bold"
           android:textSize="15sp"
           android:textColor="@color/colorAccent"
           android:layout_marginTop="42dp"
           android:layout_alignParentTop="true"
           android:layout_alignParentStart="true" />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/programming_is_thinking_not_typing"
               android:textColor="@color/redcolor"
               android:id="@+id/thinking"
               android:layout_marginTop="30dp"
               android:textSize="17sp"
               android:textStyle="bold"
               android:layout_below="@+id/thisappText"
               android:layout_alignEnd="@+id/me_about" />
          <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/name_yash"
               android:text="@string/yash_uppal"
               android:textStyle="bold"
               android:textSize="20sp"
               android:layout_below="@+id/yash_about"
               android:layout_alignEnd="@+id/yash_about"
               android:layout_marginTop="10dp" />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/name_me"
               android:text="@string/suraj_sharma"
               android:textStyle="bold"
               android:textSize="20sp"
               android:layout_alignBaseline="@+id/name_yash"
               android:layout_alignBottom="@+id/name_yash"
               android:layout_alignParentEnd="true"
               android:layout_marginEnd="26dp" />
       </RelativeLayout>